--- a/plugin.xml
+++ b/plugin.xml
@@ -47,6 +47,7 @@
             </feature>
         </config-file>
 
+        <source-file src="src/android/PendingRequests.java" target-dir="src/org/apache/cordova/inappbrowser" />
         <source-file src="src/android/InAppBrowser.java" target-dir="src/org/apache/cordova/inappbrowser" />
         <source-file src="src/android/InAppBrowserDialog.java" target-dir="src/org/apache/cordova/inappbrowser" />
         <source-file src="src/android/InAppChromeClient.java" target-dir="src/org/apache/cordova/inappbrowser" />
